<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/easypay_widget_sheet_background">

    <TextView
        android:id="@+id/tv_section_title"
        style="@style/Text.Body.3.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/billing_address"
        android:textColor="@color/easypay_widget_text_foreground"
        app:layout_constraintTop_toTopOf="parent" />

    <com.easypaysolutions.views.EasyPayEditText
        android:id="@+id/et_street_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_section_title"
        app:maxLength="100"
        app:regex="@string/regex_street_address"
        app:regexErrorMessage="@string/invalid_address_regex"
        app:title="@string/street_address" />

    <com.easypaysolutions.views.EasyPayEditText
        android:id="@+id/et_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_street_address"
        app:maxLength="20"
        app:regex="@string/regex_zip"
        app:regexErrorMessage="@string/invalid_zip_regex"
        app:title="@string/zip"
        app:uppercaseLabel="true" />

</androidx.constraintlayout.widget.ConstraintLayout>