<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/easypay_widget_sheet_background">

    <TextView
        android:id="@+id/tv_section_title"
        style="@style/Text.Body.3.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_information"
        android:textColor="@color/easypay_widget_text_foreground"
        app:layout_constraintTop_toTopOf="parent" />

    <com.easypaysolutions.views.EasyPayEditText
        android:id="@+id/et_card_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_section_title"
        app:maxLength="75"
        app:regex="@string/regex_card_holder_name"
        app:regexErrorMessage="@string/invalid_card_holder_name_regex"
        app:title="@string/card_holder_name" />

    <com.easypaysolutions.views.CardNumberEditText
        android:id="@+id/et_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_card_holder_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/et_card_number" />

    <com.easypaysolutions.views.ExpiryDateEditText
        android:id="@+id/et_expiry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_card_number" />

    <com.easypaysolutions.views.CvcEditText
        android:id="@+id/et_cvc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/et_card_number" />

</androidx.constraintlayout.widget.ConstraintLayout>