<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/easypay_widget_sheet_background">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_save_card"
        style="@style/EasyPay.Default.Checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_this_card"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_error"
        style="@style/Text.Body.3.Regular.Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cb_save_card"
        tools:text="@string/process_payment_declined_error"
        tools:visibility="visible" />

    <com.easypaysolutions.views.PrimaryButton
        android:id="@+id/btn_complete"
        style="@style/EasyPay.Default.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_main_error"
        tools:text="Pay $999.75" />

    <TextView
        android:id="@+id/tv_info_label"
        style="@style/Text.Body.3.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/easypay_widget_text_secondary"
        app:drawableStartCompat="@drawable/ic_lock_outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_complete"
        tools:text="@string/complete_all_fields_to_pay" />
</androidx.constraintlayout.widget.ConstraintLayout>