<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popup_sheet"
        android:paddingHorizontal="20dp"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/easypay_manage_cards_max_width">

            <TextView
                android:id="@+id/tv_title"
                style="@style/Text.Body.1.SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/easypay_widget_text_foreground"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/delete_this_card" />

            <TextView
                android:id="@+id/tv_confirmation"
                style="@style/Text.Body.3.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/easypay_widget_text_secondary"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="@string/delete_this_card_confirmation" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toBottomOf="@id/tv_confirmation" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_secondary"
                style="@style/EasyPay.Default.Button.Popup.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_confirmation"
                tools:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_primary"
                style="@style/EasyPay.Default.Button.Popup.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/btn_secondary"
                tools:text="@string/delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>